# OpenGL-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  log.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: MyApp.cpp  MyApp.cpp.glfw  MyApp.cpp.win32  embedTest.c  main.cpp
src/AppGL/: base.h
src/AppGL/OpenGL/: App.cpp  App.h  AppOptions.h  Window.cpp  Window.h  glDebug.cpp  glDebug.h
src/AppGL/OpenGL/glfw/: App.cpp  App.h  Window.cpp  Window.h
src/AppGL/OpenGL/win32/: Win32App.cpp  Win32App.h  Win32Window.cpp  Win32Window.h
src/AppGL/shader/: ComputeShader.cpp  ComputeShader.h  SSBO.h  Shader.cpp  Shader.h
src/OpenGL/: GLApp.cpp  GLApp.h  Window.cpp  Window.h  glDebug.h
src/shadersource/: compute.comp  fragment.frag  vertex.vert
